--- a/css/main.css
+++ b/css/main.css
@@ -3,60 +3,164 @@
     padding: 0;
     list-style: none;
     box-sizing: border-box;
+    text-decoration: none;
 }
+
+/* toevoegen font*/
 
 @font-face {
     font-family: "Myriad pro";
     src: local("myriadpro"), url ("MyriadPro-Regular.otf")format ("otf");
 }
 
+@font-face {
+    font-family: "NS sans";
+    src: local("nssans__-webfont"), url ("nssans__-webfont.ttf")format ("ttf");
+}
+
+/* body */
+
 body {
     background-color: #e7e6e9;
-    font-family: "Myriad pro";
+    font-family: "NS sans", "Myriad pro";
 }
+
+/* header navigatie*/
 
 header {
     background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    box-shadow: 0 0.2em 0.2em #888888;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    display: block;
+}
+
+
+header nav ul li {
+    float: right;
+    padding: 1.1em;
 }
 
 h1 {
-    padding: 1em;
-}
-
-#search {
-    height: 2em;
+    padding: 0 1em 1em;
 }
 
 #profile {
     height: 2em;
 }
 
-nav {
-    /*background-color: #fec818;
-    display: block;*/
+#search {
+    height: 2em;
 }
 
-main {
+form {
+    text-align: right;
+
+}
+
+/* foto bovenaan*/
+
+#reading {
+    max-height: 20em;
+    width: 100%;
+
+}
+
+/* Zoekbalk*/
+
+/* Navigatie in de main*/
+
+main nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin: 2em;
 }
+
+main nav ul {
+    background: #fec818;
+
+}
+
+main nav ul li {
+    margin: 1em;
+
+}
+
+/* sorteren = submenu */
 
 #submenu {
     display: none;
 }
 
+main > a {
+    color: green;
+}
+
 #submenu:target {
+    background-color: white;
     display: block;
 }
 
+#submenu a {
+    color: black;
+    text-decoration: none;
+}
+
+/* Artikelen*/
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+h3 {
+    font-size: 2em;
+}
+
 article {
-    object-position: center;
     background-color: white;
     margin: 2em;
-    left: 50%;
-    max-width: 40em;
+    max-width: 35em;
     padding: 2em;
+    display: flex;
+    flex-direction: column;
+}
+
+#heart {
+    height: 2em;
+}
+
+#add {
+    height: 2em;
+}
+
+footer {
+    font-size: 0.8em;
+}
+
+footer a {
+    display: flex;
+    justify-content: flex-end;
+    margin: 1em;
+}
+
+footer p {
+    float: right;
+}
+
+#leesverder {
+    background-color: #2575bb;
+    color: white;
+    text-align: center;
+    padding: 0.6em;
+    width: 50%;
+    box-shadow: 0 0.1em 0.1em #223a72;
+
+
 }
