--- a/css/main.css
+++ b/css/main.css
@@ -23,17 +23,26 @@
 body {
     background-color: #e7e6e9;
     color: #2575bb;
-    font-family: "NS sans", "Myriad pro";
-
+    font-family: "NS sans", "Myriad pro", "Verdana";
 }
-
 
 /* foto bovenaan*/
 
 #reading {
     max-height: 20em;
     width: 100%;
+}
 
+#searching {
+    padding: 0.5em;
+    width: 40%;
+}
+
+button {
+    background: #2575bb;
+    color: white;
+    font-family: "NS sans", "Myriad pro", "Verdana";
+    padding: 0.5em;
 }
 
 /* Zoekbalk*/
@@ -55,7 +64,6 @@ main nav ul {
 
 main nav ul li {
     margin: 1em;
-
 }
 
 /* sorteren = submenu */
@@ -69,8 +77,6 @@ main > a {
     background-color: #223a72;
     color: white;
     padding: 1em;
-
-
 }
 
 #submenu:target {
@@ -79,14 +85,11 @@ main > a {
     margin-top: 1em;
     width: 11em;
     box-shadow: 0 0.1em 0.1em #223a72;
-
-
 }
 
 #submenu a {
     color: black;
     text-decoration: none;
-
 }
 
 /* Artikelen*/
@@ -113,6 +116,7 @@ article {
 
 #heart {
     height: 2em;
+    background: white;
 }
 
 #add {
@@ -139,7 +143,6 @@ footer p {
     float: left;
     margin-top: 2em;
     padding: 0.5em;
-
 }
 
 #leesverder {
@@ -149,4 +152,18 @@ footer p {
     padding: 0.6em;
     width: 50%;
     box-shadow: 0 0.1em 0.1em #223a72;
+}
+
+/* Kinderboek artikel*/
+
+#kinderboekverhaal {
+    width: 150em;
+}
+
+#alzheimerverhaal {
+    width: 80em;
+}
+
+#blindverhaal {
+    width: 79em;
 }
