--- a/css/signup.css
+++ b/css/signup.css
@@ -22,8 +22,15 @@ fieldset input {
     margin: 8px 0;
 }
 
-input[type=text]:focus {
-    background-color: #e7e6e9;
+fieldset:invalid .feedback {
+    display: none;
+}
+
+fieldset .feedback {
+    display: block;
+    color: White;
+    background-color: #e4b32f;
+    padding: .25em;
 }
 
 h2 {
@@ -40,8 +47,17 @@ label {
     font-size: 0.8em;
 }
 
-#facebook,
-#aanmelden {
+input:invalid {
+    background: rgba(255, 0, 0, .1);
+}
+
+input[type=text]:focus {
+    background-color: #e7e6e9;
+}
+
+
+fieldset a:nth-of-type(1),
+fieldset a:nth-of-type(2) {
     background-color: #39589b;
     box-shadow: 0 0.1em 0.1em #223a72;
     color: white;
@@ -49,9 +65,21 @@ label {
     margin-top: 1em;
     padding: 0.7em;
     text-align: center;
+    transition: all .2s;
 }
 
-#aanmelden {
+fieldset a:nth-of-type(2) {
     background-color: #2575bb;
+}
 
+fieldset a:nth-of-type(1):hover {
+    color: #2575bb;
+    background-color: #39589b;
+    box-shadow: inset 0 1.2em rgba(0, 0, 0, .04), 0 0 5px rgba(0, 0, 0, .5);
+}
+
+fieldset a:nth-of-type(2):hover {
+    color: #39589b;
+    background-color: #2575bb;
+    box-shadow: inset 0 1.2em rgba(0, 0, 0, .04), 0 0 5px rgba(0, 0, 0, .5);
 }
