--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ section {
 
 }
 
-h3 {
+h2 {
     color: #223a72;
     font-size: 2em;
 }
@@ -172,3 +172,5 @@ article a {
     width: 50%;
 
 }
+
+/* VERHALENLIJST PAGINA*/
