html en css klaar

--- a/css/main.css
+++ b/css/main.css
@@ -173,4 +173,14 @@ article a {
 
 }
 
+/* VRIENDEN PAGINA*/
+
+#leuk {
+    color: lightgrey;
+    font-size: 0.8em;
+    margin-bottom: 1em;
+    ]
+}
+
+
 /* VERHALENLIJST PAGINA*/
