--- a/css/header.css
+++ b/css/header.css
@@ -20,11 +20,11 @@ h1 {
     padding: 0.4em 1em;
 }
 
-nav ul img:first-of-type {
+nav ul img:nth-of-type(1) {
     height: 1.5em;
 }
 
-nav ul img:nth-of-type(1) {
+nav ul img:nth-of-type(2) {
     height: 1.5em;
 }
 
@@ -32,14 +32,14 @@ form {
     text-align: right;
 }
 
-#searchbar {
+#searching {
     padding: 12px 20px;
     margin: 8px 0;
     width: 15em;
     opacity: 0;
 }
 
-#searchbar:focus {
+#searching:focus {
     opacity: 1;
 }
 
@@ -49,5 +49,10 @@ form button {
     font-family: "NS sans", "Myriad pro", "Verdana";
     font-size: 1em;
     padding: 0.6em;
+    opacity: 0;
 
+}
+
+form button:hover {
+    opacity: 1;
 }
