--- a/css/header.css
+++ b/css/header.css
@@ -28,6 +28,11 @@ nav ul img:nth-of-type(2) {
     height: 1.5em;
 }
 
+.toevoegen {
+    position: absolute;
+
+}
+
 form {
     text-align: right;
 }
