--- a/css/header.css
+++ b/css/header.css
@@ -20,17 +20,18 @@ h1 {
     padding: 0.4em 1em;
 }
 
-nav ul img:nth-of-type(1) {
+nav ul li img:nth-of-type(1) {
     height: 1.5em;
 }
 
-nav ul img:nth-of-type(2) {
+nav ul li img:nth-of-type(3) {
     height: 1.5em;
 }
 
-.toevoegen {
+.eentje {
     position: absolute;
-
+    margin-left: 3em;
+    transition: all 0.2s;
 }
 
 form {
