--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,6 @@ body > img {
     width: 100%;
 }
 
-/* Zoekbalk*/
-
 /* Navigatie in de main*/
 
 main nav {
@@ -141,6 +139,10 @@ footer img:nth-of-type(1) {
 
 footer img:nth-of-type(2) {
     height: 2em;
+}
+
+.toevoegen {
+    transition: all 0.2s;
 }
 
 /* footers in artikelen*/
