--- a/css/artikel.css
+++ b/css/artikel.css
@@ -162,12 +162,12 @@ section > a {
     width: 50%;
 }
 
-#heart {
+footer img:nth-of-type(1) {
     height: 2em;
     background: white;
 }
 
-.add {
+footer img:nth-of-type(2) {
     height: 2em;
 }
 
