alles aanpassen met het eentje

--- a/css/main.css
+++ b/css/main.css
@@ -141,9 +141,9 @@ footer img:nth-of-type(2) {
     height: 2em;
 }
 
-.toevoegen {
+/*.toevoegen {
     transition: all 0.2s;
-}
+}*/
 
 /* footers in artikelen*/
 
