--- a/css/header.css
+++ b/css/header.css
@@ -24,15 +24,21 @@ nav ul li img:nth-of-type(1) {
     height: 1.5em;
 }
 
+#eentje {
+    position: absolute;
+    margin-left: 3em;
+    transition: all 0.2s;
+    opacity: 0;
+}
+
+#eentje.yay {
+    opacity: 1;
+}
+
 nav ul li img:nth-of-type(3) {
     height: 1.5em;
 }
 
-.eentje {
-    position: absolute;
-    margin-left: 3em;
-    transition: all 0.2s;
-}
 
 form {
     text-align: right;
