--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
 body > img {
     max-height: 20em;
     width: 100%;
+
 }
 
 /* Navigatie in de main*/
@@ -134,14 +135,14 @@ footer img:nth-of-type(1) {
     height: 2em;
 }
 
-#roodje {
+footer img:nth-of-type(2) {
     height: 2em;
     position: relative;
-    margin-left: -0.5em;
-
+    margin-left: 2.5em;
+    opacity: 0;
 }
 
-#hartje.rood {
+footer img:nth-of-type(2).rood {
     transition: all 0.2s;
     opacity: 1;
 }
