--- a/css/main.css
+++ b/css/main.css
@@ -138,14 +138,11 @@ footer img:nth-of-type(1) {
 footer img:nth-of-type(2) {
     height: 2em;
     position: relative;
-    margin-left: 2.5em;
-    opacity: 0;
+    margin-left: 2em;
+    display: none;
+    transition: all 0.2s;
 }
 
-footer img:nth-of-type(2).rood {
-    transition: all 0.2s;
-    opacity: 1;
-}
 
 /* plusje in artikel */
 
@@ -153,15 +150,6 @@ footer img:nth-of-type(3) {
     height: 2em;
 }
 
-
-/*#eentje.yay {
-    transition: all 0.2s;
-    opacity: 1;
-}
-
-/*.toevoegen {
-    transition: all 0.2s;
-}*/
 
 /* footers in artikelen*/
 
