--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,6 @@ main nav {
 
 main nav ul {
     background: #fec818;
-
 }
 
 main nav ul li {
@@ -59,10 +58,15 @@ main nav ul li {
     display: none;
 }
 
+h1 {
+    margin-top: 1em;
+}
+
 main > a {
     background-color: #223a72;
     color: white;
     padding: 1em;
+
 }
 
 #submenu:target {
@@ -84,7 +88,6 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
 }
 
 h2 {
@@ -94,7 +97,7 @@ h2 {
 
 article {
     background-color: white;
-    margin: 2em;
+    margin: 1em 2em 2em;
     max-width: 35em;
     padding: 2em;
     display: flex;
