--- a/css/main.css
+++ b/css/main.css
@@ -192,9 +192,10 @@ article a {
     ]
 }
 
-#leuk.nu {
-    transition: all 0.2s;
-    opacity: 1;
+#leuk.verander {
+    color: #fec818;
+    transition: all .5s;
+
 }
 
 /* VERHALENLIJST PAGINA*/
