--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
 /* body */
 
 body {
+    margin-top: -2em;
     background-color: #e7e6e9;
     color: #2575bb;
     font-family: "NS sans", "Myriad pro", "Verdana";
@@ -28,10 +29,55 @@ body {
 
 /* foto bovenaan*/
 
-body > img {
+#ws {
     max-height: 20em;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    border: dotted 0.2em;
+    border-color: #fec818;
+}
 
+@media(min-width: 50em) {
+    #ws {
+        margin: 3em auto;
+        width: 70%;
+    }
+}
+
+@media(min-width: 70em) {
+    #ws {
+        margin: auto;
+        width: 50%;
+    }
+}
+
+#ws1 {
+    background-color: #e7e6e9;
+}
+
+#meer {
+    color: #2575bb;
+    font-size: 1.5em;
+    margin-left: 1.5em
+}
+
+#under {
+    margin-top: -8em;
+    max-height: 20em;
+    width: 100%;
+}
+
+@media(max-width: 30em) {
+    #under {
+        margin-top: -5em;
+    }
+}
+
+body > img {
+    margin-top: 6em;
+    max-height: 20em;
+    width: 100%;
 }
 
 /* Navigatie in de main*/
@@ -41,8 +87,22 @@ main nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: -1em 2em 1.5em 2em;
+    margin: -2em 2em 2em 2em;
+
 }
+
+@media(min-width: 30em) {
+    main nav {
+        margin: -10em 2em 8em 2em;
+    }
+}
+
+@media(min-width: 60em) {
+    main nav {
+        margin: -12em 2em 8em 2em;
+    }
+}
+
 
 main nav ul {
     background: #fec818;
@@ -80,6 +140,7 @@ main > a {
 #submenu a {
     color: black;
     text-decoration: none;
+
 }
 
 /* Artikelen*/
@@ -104,7 +165,7 @@ article {
     flex-direction: column;
 }
 
-article:nth-of-type(1):hover {
+article:nth-of-type(2):hover {
     background-image: url("img/hoverfoto.jpg");
 }
 
